# netssm

./: .gitignore  README.md  pyproject.toml  train.py
checkpoints/configs/default/: config.json
checkpoints/configs/netflix_multi_100k_30_epochs/: config.json
example/: train_netssm_from_scratch.ipynb
example/input/: amazon.pcap  labels.csv  netflix.pcap  twitch.pcap  youtube.pcap
generation/: conversion.py  generate.py
models/: config_mamba.py  mixer_seq_simple.py
preprocessing/: create_tok_dataset.py  main.go
tokenizers/: create_tokenizer.py
tokenizers/nm_tokenizer_multi_netflix/: tokenizer.json  tokenizer_config.json
utils/: generation.py  hf.py  loss.py
